# COMP-371-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md  insturctuons.md  main.cpp
include/: Camera.h  Model.h  Shader.h
include/glad/: glad.h
src/: main.cpp
src/Models/: pier.mtl
src/Models/plane/: air_propeller_plane_-_lowpoly.glb  colombian_emb_314_tucano.glb  supermarine_spitfire.glbZone.Identifier
src/shaders/: fragment.glsl  shadow_depth.fs  solid.fs  vertex.glsl  water.fs  water.vs
